# documate-personal

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: task.md
archive/: README.md
archive/legacy_code/: baseline_code.py  router_experiment.py
data/benchmarks/: config.toml
data/benchmarks/fixtures/: cases.generated.jsonl  cases.seed.jsonl  (+1 more)
docs/: benchmarking.md
script/: check_encoding.py
src/: agent_manager.py  answer_schema.py  baseline_code.py  chunking.py  cli.py  domain_docs.py  evidence.py  graph_builder.py  latency.py  llm.py  logging_utils.py  main.py  make_graph.py  node.py  planner_schema.py  prompts.py  rag_build.py  runtime_encoding.py  runtime_paths.py  service_manager.py  settings.py  slack_utils.py  tools.py  upload_helpers.py
src/eval/: __init__.py  generate_cases.py  history.py  judge_llm.py  main.py  reporting.py  runner_online.py  schemas.py  scoring_rules.py
src/nodes/: __init__.py  actions.py  planner.py  retrieval.py  retry.py  session.py  state.py  synthesis.py  validation.py
src/tools/: __init__.py  _common.py  docs_search.py  local_rag.py  save_text.py  slack_notify.py
src/util/: util.py
src/web/: app.py  cleanup.py  main.py  routes.py  schemas.py  session_store.py  streamlit_api_client.py  streamlit_app.py  streamlit_chat.py  streamlit_page.py  streamlit_state.py  streamlit_upload_handler.py
tests/: test_planner_graph.py
tests/core/: __init__.py  helpers.py  test_actions_nodes.py  test_graph_routing.py  test_llm_registry.py  test_planner_nodes.py  test_rag_build.py  test_retrieval_nodes.py  test_service_manager.py  test_synthesis_validation.py
tests/eval/: test_backward_compat_inputs.py  test_citation_structured_scoring.py  test_fixture_contracts.py  test_generate_cases_scenarios.py  test_history_report.py  test_latency_breakdown_reporting.py  test_reporting_root_cause.py  test_runner_error_buckets.py  test_runner_request_payloads.py  test_weight_override.py
tests/web/: test_agent_response_schema.py  test_app_runtime_modules.py  test_evidence_pipeline.py  test_streamlit_api_client.py  test_streamlit_chat.py  test_streamlit_state.py  test_streamlit_upload_handler.py  test_upload_session_isolation.py
(+10 files in other folders)
