[project]
name = "DocuMate"
version = "0.2.0"
description = "DocuMate: a LangGraph-based learning assistant combining official-doc search, local RAG, and session chat."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.1",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.1",
    "langchain-tavily>=0.2.12",
    "langgraph>=1.0.1",
    "nbformat>=5.10.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "slack-sdk>=3.37.0",
    "streamlit>=1.50.0",
    "uvicorn>=0.38.0",
]
